# ESP32-Head-motion-tracking-system

./: README.md
HT-Lower/: platformio.ini
HT-Lower/lib/: lv_conf.h
HT-Lower/lib/BMI160/: BMI160Gen.cpp  BMI160Gen.h
HT-Lower/lib/IT7259/src/: IT7259Driver.cpp  IT7259Driver.h
HT-Lower/lib/TFT_eSPI/: User_Setup.h  User_Setup_Select.h
HT-Lower/lib/TFT_eSPI/User_Setups/: Setup26_TTGO_T_Wristband.h  Setup72_ESP32_ST7789_172x320.h
HT-Lower/lib/lvgl/: CMakeLists.txt  lv_conf_template.h
HT-Lower/lib/lvgl/src/hal/: lv_hal_disp.c
HT-Lower/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
HT-Lower/lib/ui/src/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel1.c  ui_comp_panel1.h
HT-Lower/lib/ui/src/fonts/: ui_font_fangsong.c
HT-Lower/lib/ui/src/images/: ui_img_0_png.c  ui_img_1_png.c  ui_img_barrety_png.c  ui_img_signal0_png.c  ui_img_signal1_png.c  ui_img_signal2_png.c  ui_img_signal3_png.c  ui_img_signal4_png.c  ui_img_signal_png.c  ui_img_usb1_png.c
HT-Lower/lib/ui/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c
HT-Lower/src/: config.cpp  config.h  led.cpp  led.h  main.cpp  otg.cpp  otg.h  ppm.cpp  ppm.h  sensor.cpp  sensor.h  ui_main.cpp  ui_main.h  wireless.cpp  wireless.h
HT-Upper/lib/QMC5883LCompass/src/: QMC5883LCompass.cpp  QMC5883LCompass.h
HT-Upper/src/: config.cpp  config.h  main.cpp  sensor.cpp  sensor.h  wireless.cpp  wireless.h
(+1 files in other folders)
